--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script src="confetti.js"></script>
-<audio autoplay src="src/happy_birthday.mp3"></audio>
+<audio controls autoplay src="src/happy_birthday.mp3"></audio>
 <title>
   Shira's Site
 </title>
@@ -137,7 +137,7 @@
    <!-- Modal content -->
    <div class="modal-content">
      <span class="close">&times;</span>
-     <p style="font-size:500%;color:white;text-align:center;">היום יש לשירה יום הולדת!</p>
+     <p style="font-size:500%;color:white;text-align:center;">היום יש לשירה יום הולדת!🥳🥳🥳</p>
    </div>
  
  </div> 
