--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script src="confetti.js"></script>
-<audio controls autoplay src="src/happy_birthday.mp3"></audio>
 <title>
   Shira's Site
 </title>
@@ -49,6 +48,7 @@
 <h1 class="decorated" style="color:darkslategrey;font-size:200%;">
   <span>קצת עליי:</span>
 </h1>
+<audio controls autoplay> <source src="src/happy_birthday.mp3"></audio>
 <br/>
 <p style="color:darkslategrey;font-size:150%;">
   שירה "טומי" בן הרוש, נולדה ב-15.10.2002. אחות של שחף ובת של פזית לוי ואלי בן הרוש (כן כן גרושים זה מה יש). גרה ביבנה (לא ממליץ ללכת אין מה לעשות שם - תומכת).משרתת במוס....אההה חיל האוויר. מתחילה בקרוב תואר בפסיכולוגיה באוניברסיטה הפתוחה (נרשמה היום -💁‍♀). חברה טובה של לין עוד מהתיכון כשהן היו רבות ברדיו על שטויות. (זה עוד כלום) לא הלכה למגמת ריקוד כי היא לא רוקדת אז במקום היא עשתה פסיכולוגיה ותקשורת (!). כיום שירה בקבע בתפקיד "אב בית" של בסיס חפץ חיים ומדי פעם כשהיא חוזרת הביתה היא הולכת למקומות עם איזה הודי שהיא מכירה (חושד שהיא אוהבת הודים) .
